log/build_2025-06-19_18-17-56/thrust_package/stderr.log
/home/uaskash/.local/lib/python3.10/site-packages/setuptools/_distutils/dist.py:289: UserWarning: Unknown distribution option: 'tests_require'
  warnings.warn(msg)
  File "/home/uaskash/uas_ws/install/thrust_package/lib/python3.10/site-packages/thrust_package/thrust_command.py", line 50
    if i%0 = 0:
       ^^^
SyntaxError: cannot assign to expression here. Maybe you meant '==' instead of '='?

